force-app/main/default/objects/RegieBillingPlan__c/RegieBillingPlan__c.object-meta.xml
<CustomObject>
    <label>Plan Facturation Régie</label>
    <nameField>
        <displayFormat>RBP-{00000}</displayFormat>
        <label>N° Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans Facturation Régie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>