force-app/main/default/objects/RegieBillingPlan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans Facturation Régie</relationshipLabel>
    <relationshipName>RegieBillingPlans</relationshipName>
    <type>Lookup</type>
</CustomField>