force-app/main/default/objects/RegieBillingPlan__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Message d&apos;erreur</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>