force-app/main/default/objects/RegieBillingPlan__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>Clé externe (Napta)</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>