force-app/main/default/objects/RegieBillingPlan__c/fields/FraisMontant__c.field-meta.xml
<CustomField>
    <fullName>FraisMontant__c</fullName>
    <label>Montant Frais</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>