force-app/main/default/objects/RegieBillingPlan__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture</label>
    <referenceTo>Invoice</referenceTo>
    <relationshipLabel>Plans Facturation Régie</relationshipLabel>
    <relationshipName>RegieBillingPlans</relationshipName>
    <type>Lookup</type>
</CustomField>