force-app/main/default/objects/RegieBillingPlan__c/fields/JoursReels__c.field-meta.xml
<CustomField>
    <fullName>JoursReels__c</fullName>
    <label>Jours réels (Napta)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>