force-app/main/default/objects/RegieBillingPlan__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <formula>NULLVALUE(JoursReels__c,0) * NULLVALUE(TJM__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>