force-app/main/default/objects/RegieBillingPlan__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mission</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Plans Facturation Régie</relationshipLabel>
    <relationshipName>RegieBillingPlans</relationshipName>
    <type>Lookup</type>
</CustomField>