force-app/main/default/objects/RegieBillingPlan__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de mission</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Plans Facturation Régie</relationshipLabel>
    <relationshipName>RegieBillingPlans</relationshipName>
    <type>Lookup</type>
</CustomField>