force-app/main/default/objects/RegieBillingPlan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Facturé</fullName>
            </value>
            <value>
                <fullName>Erreur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>