force-app/main/default/objects/RegieBillingPlan__c/fields/TJM__c.field-meta.xml
<CustomField>
    <fullName>TJM__c</fullName>
    <label>TJM</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>